src/ui/snapshots/terracotta__ui__preview__tests__preview_160x60_apply-failure.snap
---
source: src/ui/preview.rs
expression: buffer_text(&buffer)
---










                    Terracotta | infra/prod

                    ┌Apply failed──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
                    │Changes may already be applied.                                                                                      ↑│
                    │Error: AccessDenied: synthetic provider rejected the request                                                         █│
                    │Terraform diagnostic: inspect the log before retrying.                                                               █│
                    │                                                                                                                     █│
                    │Terraform will perform the following actions:                                                                        █│
                    │                                                                                                                     █│
                    │  # terraform_data.api will be updated in-place                                                                      █│
                    │  ~ resource "terraform_data" "api" {                                                                                █│
                    │      id       = "api-20260920"                                                                                      █│
                    │      ~ input  = "before" -> "after"                                                                                 █│
                    │      # (4 unchanged attributes hidden)                                                                              █│
                    │    }                                                                                                                █│
                    │                                                                                                                     █│
                    │  # terraform_data.worker must be replaced                                                                           █│
                    │-/+ resource "terraform_data" "worker" {                                                                             █│
                    │      ~ input = "worker-before" -> "worker-after" # forces replacement                                               ││
                    │      - old_checksum = "sha256:0123456789abcdef0123456789abcdef0123456789abcdef"                                     ││
                    │      + new_checksum = (known after apply)                                                                           ││
                    │    }                                                                                                                ││
                    │                                                                                                                     ││
                    │  # terraform_data.old will be destroyed                                                                             ││
                    │  - resource "terraform_data" "old" {                                                                                ││
                    │      id = "old-20260920"                                                                                            ││
                    │    }                                                                                                                ││
                    │                                                                                                                     ││
                    │  # terraform_data.new will be created                                                                               ││
                    │  + resource "terraform_data" "new" {                                                                                ││
                    │      input = "new-value"                                                                                            ││
                    │      note  = "A deliberately long synthetic value keeps horizontal scrolling visible"                               ││
                    │    }                                                                                                                ││
                    │                                                                                                                     ││
                    │Changes to Outputs:                                                                                                  ││
                    │  + endpoint = (known after apply)                                                                                   ││
                    │  ~ summary  = "old summary" -> "new summary with a deliberately long value for review"                              ││
                    │←███████████████████████████████████████████████████████████████─────────────────────────────────────────────────────→│
                    └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                    ↑/↓/←/→ scroll | y yank | q quit
